# MBTouhou

./: .gitignore  CMakeLists.txt  MBPM_FileInfo  MBPM_FileInfoIgnore  MBPM_PacketInfo  MBTouhouTypes.cpp  MBTouhouTypes.h  README.md
Headers/: Engine.h  Gameobject.h  Hitbox.h  MinMath.h  Renderer.h  Shader.h  SpelObjekt.h  Texture.h  Vector2D.h  VertexBufferLayout.h
Headers/SpelObjekt/: Enemy_Bullet_Template.h  Level_1_Enemy_2.h  Level_1_Enemy_3.h  Player_Attack_BigShot.h
MBGameEngine/: MBGEStandardComponents.cpp  MBGEStandardComponents.h  MBGameEngine.cpp  MBGameEngine.h
ProjectDiary/: 2021-11-05.md  2021-11-28.md  2021-11-30.md  2021-12-05.md  2021-12-06.md  2021-12-06_2.md
Resources/Shaders/: fragmentshader.txt  vertexshader.txt
Source/: Classes.cpp  Engine.cpp  Gameobject.cpp  Hitbox.cpp  Renderer.cpp  Shader.cpp  Source.cpp  SpelObjekt.cpp  Texture.cpp  Vector2D.cpp
Source/EgenUtility/: MinaStringOperations.cpp
Source/Engine/: Engine_GenericComponent.cpp  Engine_GenericComponent.h  SpriteAnimationRenderer.cpp  SpriteAnimationRenderer.h  TextRendering.cpp  TextRendering.h
Source/Engine/SoundEngine/: TouhouSoundEngine.cpp  TouhouSoundEngine.h
Source/SpelObjektcpp/: Enemy_Bullet_Template.cpp  Johan.cpp  Johan.h  Level_1_Enemy_2.cpp  Level_1_Enemy_3.cpp  MainMenu.cpp  PausMenu.cpp  Player_Attack_BigShot.cpp  SpelarenFunktioner1.cpp
